--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 				 </exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-webflow</artifactId>
+			<version>2.4.1.RELEASE</version>
+		</dependency>
 				
 		<!-- AspectJ 
 		<dependency>
