--- a/.classpath
+++ b/.classpath
@@ -29,16 +29,9 @@
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-binding/2.4.1.RELEASE/spring-binding-2.4.1.RELEASE.jar" sourcepath="M2_REPO/org/springframework/webflow/spring-binding/2.4.1.RELEASE/spring-binding-2.4.1.RELEASE-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-js/2.4.1.RELEASE/spring-js-2.4.1.RELEASE.jar" sourcepath="M2_REPO/org/springframework/webflow/spring-js/2.4.1.RELEASE/spring-js-2.4.1.RELEASE-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-js-resources/2.4.1.RELEASE/spring-js-resources-2.4.1.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-jdbc/4.2.2.RELEASE/spring-jdbc-4.2.2.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-jdbc/4.2.2.RELEASE/spring-jdbc-4.2.2.RELEASE-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/Users/ad/.m2/repository/org/springframework/spring-jdbc/4.2.2.RELEASE/spring-jdbc-4.2.2.RELEASE-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-tx/4.2.2.RELEASE/spring-tx-4.2.2.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-tx/4.2.2.RELEASE/spring-tx-4.2.2.RELEASE-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/Users/ad/.m2/repository/org/springframework/spring-tx/4.2.2.RELEASE/spring-tx-4.2.2.RELEASE-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-orm/4.3.6.RELEASE/spring-orm-4.3.6.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-orm/4.3.6.RELEASE/spring-orm-4.3.6.RELEASE-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-jdbc/4.3.6.RELEASE/spring-jdbc-4.3.6.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-jdbc/4.3.6.RELEASE/spring-jdbc-4.3.6.RELEASE-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-tx/4.3.6.RELEASE/spring-tx-4.3.6.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-tx/4.3.6.RELEASE/spring-tx-4.3.6.RELEASE-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/h2database/h2/1.4.190/h2-1.4.190.jar" sourcepath="M2_REPO/com/h2database/h2/1.4.190/h2-1.4.190-sources.jar">
     <attributes>
       <attribute value="jar:file:/Users/ad/.m2/repository/com/h2database/h2/1.4.190/h2-1.4.190-javadoc.jar!/" name="javadoc_location"/>
