--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,18 @@
 			<artifactId>spring-webflow</artifactId>
 			<version>2.4.1.RELEASE</version>
 		</dependency>
-		<!-- Add spring jdbc -->
+		<!-- Add spring orm(jdbc included in orm module) 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>4.2.2.RELEASE</version>
+		</dependency>
+		-->
+		<!-- Add spring orm(jdbc included in orm,tx modules, so we only need to add orm module) -->
+		<dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-orm</artifactId>
+		  <version>${org.springframework-version}</version>
 		</dependency>
 		<!-- EmbeddedDatabase with H2  -->
 		<dependency>
