--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,16 @@
 			<version>1.4.190</version>
 		</dependency>
 		
+		<!-- Database connection pool 
+		See here for more details on commons-dbcp versus tomcat-jdbc: 
+    	http://blog.ippon.fr/2013/03/13/improving-the-performance-of-the-spring-petclinic-sample-application-part-3-of-5/
+    	-->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jdbc</artifactId>
+			<version>8.0.23</version>
+		</dependency>
+		
 		<!-- AspectJ <dependency> <groupId>org.aspectj</groupId> <artifactId>aspectjrt</artifactId> 
 			<version>${org.aspectj-version}</version> </dependency> -->
 		<!-- Logging -->
