--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
 		<org.springframework-version>4.3.6.RELEASE</org.springframework-version>
 		<org.slf4j-version>1.7.12</org.slf4j-version>
 		<hibernate.version>4.3.2.Final</hibernate.version>
+		<!-- Dates -->
+		<jodatime-hibernate.version>1.3</jodatime-hibernate.version>
+		<jodatime-jsptags.version>1.1.1</jodatime-jsptags.version>
+		<jadira-usertype-core.version>3.2.0.GA</jadira-usertype-core.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -77,6 +81,23 @@
 			<version>${hibernate.version}</version>
 		</dependency>
 
+		<!-- Date and Time -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.7</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time-hibernate</artifactId>
+			<version>${jodatime-hibernate.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time-jsptags</artifactId>
+			<version>${jodatime-jsptags.version}</version>
+		</dependency>
+
 		<!-- AspectJ <dependency> <groupId>org.aspectj</groupId> <artifactId>aspectjrt</artifactId> 
 			<version>${org.aspectj-version}</version> </dependency> -->
 		<!-- Logging -->
@@ -134,6 +155,12 @@
 			<version>2.0.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+		
 		<!-- @Inject <dependency> <groupId>javax.inject</groupId> <artifactId>javax.inject</artifactId> 
 			<version>1</version> </dependency> -->
 		<!-- Servlet -->
