--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		<!-- Databases - Uses HSQL by default -->
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.3</version>
+			<scope>runtime</scope>
+		</dependency>
 		<!-- EmbeddedDatabase with H2 -->
 		<dependency>
 			<groupId>com.h2database</groupId>
